# PPO_Neural-Control-cpp

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: CMakeLists.txt  README.md
backend/src/: main.cpp
backend/src/application/: job_service.cpp  job_service.h  mission_service.cpp  mission_service.h
backend/src/common/: http_utils.cpp  http_utils.h  json.h  logger.cpp  logger.h  time_utils.cpp  time_utils.h
backend/src/domain/: types.h
backend/src/persistence/: sqlite_store.cpp  sqlite_store.h
backend/src/replay/: replay_service.cpp  replay_service.h
backend/src/telemetry/: csv_telemetry_store.cpp  csv_telemetry_store.h
backend/src/transport/: http_server.cpp  http_server.h  json_serialization.cpp  json_serialization.h
config/: benchmark.smoke.json  eval.default.json  train.default.json
docker/: Dockerfile.backend  Dockerfile.cpp-dev  Dockerfile.frontend
docs/: FRONTIER_AI_FEED_2026-03-13.md  SECURITY.md  architecture.md  build.md  index.html  roadmap.md
docs/architecture/: backend-api.md  system-dataflow.md  tensorrt-backend.md
docs/database/: sqlite-telemetry.md
docs/demo/: benchmark_summary.json  learning_curve.csv  live_rollout.csv  neural_network_3d.html  neural_network_3d.json
docs/openapi/: orbital-api.yaml
docs/performance/: backend-performance.md  inference-backend-comparison.md
docs/replay/: mission-replay.md
docs/uml/: class-diagram.md  component-diagram.md  sequence-training.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json
frontend/public/textures/earth/: README.md
frontend/src/: main.tsx
frontend/src/app/: app.tsx  globals.css
frontend/src/app/layout/: console-layout.tsx
frontend/src/app/providers/: app-providers.tsx
frontend/src/app/router/: app-router.tsx
frontend/src/entities/episode/model/: types.ts
frontend/src/entities/orbit/model/: types.ts
frontend/src/entities/replay/model/: adapters.ts  types.ts
frontend/src/entities/run/model/: types.ts
frontend/src/entities/telemetry/model/: types.ts
frontend/src/features/benchmark-summary/ui/: benchmark-summary-card.tsx
frontend/src/features/orbital-view/lib/: procedural-earth-texture.ts
frontend/src/features/orbital-view/ui/: orbital-scene-canvas.tsx
frontend/src/features/replay-controls/ui/: replay-controls-panel.tsx
frontend/src/features/run-selection/ui/: run-selection-panel.tsx
frontend/src/features/telemetry-inspection/ui/: telemetry-inspection-panel.tsx
frontend/src/pages/MissionReplayPage/: index.tsx
frontend/src/pages/RunExplorerPage/: index.tsx
frontend/src/shared/api/: http-client.ts  index.ts  orbital-api-client.ts
frontend/src/shared/api/hooks/: use-live-telemetry-stream.ts  use-replay-query.ts  use-runs-query.ts
frontend/src/shared/config/: replay.ts
frontend/src/shared/hooks/: use-replay-controller.ts
frontend/src/shared/lib/: format.ts  math.ts
frontend/src/shared/mock/: mission-replay.mock.ts
frontend/src/shared/ui/: data-field.tsx  panel.tsx  status-chip.tsx
frontend/src/widgets/BenchmarkCard/ui/: benchmark-card-widget.tsx
frontend/src/widgets/MissionTopbar/ui/: mission-topbar.tsx
frontend/src/widgets/OrbitalCanvas/ui/: orbital-canvas-widget.tsx
frontend/src/widgets/ReplayTimeline/ui/: replay-timeline-widget.tsx
frontend/src/widgets/TelemetrySidebar/ui/: telemetry-sidebar-widget.tsx
mlops/: README.md
notebooks/: learning_curve.ipynb
scripts/: benchmark_smoke.sh  compare_inference_backends.sh  eval.sh  train.sh
sim/include/orbital/sim/: orbital_dynamics.hpp
src/app/: training_app.cpp
src/application/: benchmark_runner.cpp  benchmark_runner.h  evaluation_runner.cpp  evaluation_runner.h  training_runner.cpp  training_runner.h
src/common/: determinism.cpp  determinism.h  json_utils.cpp  json_utils.h  time_utils.cpp  time_utils.h
src/domain/config/: config_validation.cpp  experiment_config.cpp  experiment_config.h
src/domain/env/: action_safety_shield.h  environment.h  environment_factory.cpp  environment_factory.h  mujoco_cartpole_env.cpp  mujoco_cartpole_env.h  orbital_6dof_env.cpp  orbital_6dof_env.h  point_mass_env.cpp  point_mass_env.h  point_mass_reward.h
src/domain/inference/: inference_backend_factory.cpp  inference_backend_factory.h  inference_benchmark.cpp  inference_benchmark.h  libtorch_policy_backend.cpp  libtorch_policy_backend.h  policy_inference_backend.h  tensorrt_native_backend.cpp  tensorrt_native_backend.h  tensorrt_policy_backend.cpp  tensorrt_policy_backend.h  tensorrt_policy_backend_stub.cpp  tensorrt_policy_backend_stub.h
src/domain/ppo/: policy_value_model.cpp  policy_value_model.h  ppo_types.h  trainer.cpp  trainer.h
src/infrastructure/artifacts/: artifact_layout.cpp  artifact_layout.h  checkpoint_manager.cpp  checkpoint_manager.h
src/infrastructure/persistence/: sqlite3_shim.h  sqlite_experiment_store.cpp  sqlite_experiment_store.h
src/infrastructure/reporting/: live_rollout_writer.cpp  live_rollout_writer.h  metrics_csv_writer.cpp  metrics_csv_writer.h
src/interfaces/cli/: command_line.cpp  command_line.h  main.cpp
src/model/: ppo_agent.cpp  ppo_agent.h
src/tests/: inference_backend_parity.cpp
src/train/: ppo_trainer.cpp  ppo_trainer.h  rollout_buffer.h
src/utils/: csv_logger.cpp  neural_3d_export.cpp
tools/: plot_learning_curve.py  publish_demo.py  setup_vcpkg.sh
training/bindings/: README.md
